fix: don't shrink icon in overflow

--- a/src/components/Modal/ModalHeader/ModalHeader.module.scss
+++ b/src/components/Modal/ModalHeader/ModalHeader.module.scss
@@ -5,6 +5,7 @@
 
   .icon {
     margin-right: var(--spacing-small);
+    flex-shrink: 0;
   }
 
   .description {
